--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
